...
            // Display the control view
            ControlsView(viewModel: viewModel)

            Spacer()

            // Display the switch button for turning the appliance on or off
            SwitchButton(text: viewModel.appliance.state == "Off" ? "TURN ON" : "TURN OFF", action: viewModel.toggleApplianceState)

            Spacer()
        }

        .withDefaultPadding()
        .withCustomBackground()
...
